<resources>
    <string name="app_name">NYT Article Search</string>
    <string name="action_settings">Settings</string>
    <string name="btnSearch">Search</string>
    <string name="tvBeginDate">Begin Date</string>
    <string name="tvSortDate">Sort Order</string>
    <string name="tvFilter">News Desk Values</string>
    <string name="chkArt">Arts</string>
    <string name="chkFashion">Fashion \u0026 Style</string>
    <string name="chkSport">Sports</string>
    <string name="btnSave">Save</string>
</resources>
