<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="40dp"
    tools:context="vn.dise.nytarticlesearch.activities.SettingActivity">

    <TextView
        android:id="@+id/tvBeginDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/tvBeginDate"
        android:textSize="@dimen/font_size_medium"
        app:layout_widthPercent="35%" />

    <TextView
        android:id="@+id/etBeginDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tvBeginDate"
        android:editable="false"
        android:textSize="@dimen/font_size_medium"
        android:background="@drawable/text_border"
        app:layout_widthPercent="50%" />


    <TextView
        android:id="@+id/tvSort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etBeginDate"
        android:paddingTop="25dp"
        android:text="@string/tvSortDate"
        android:textSize="@dimen/font_size_medium"
        app:layout_widthPercent="35%" />

    <Spinner
        android:id="@+id/spSortValue"
        android:textSize="@dimen/font_size_medium"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/etBeginDate"
        android:layout_toRightOf="@id/tvSort"
        android:layout_toEndOf="@id/tvSort"
        android:entries="@array/sort_values"
        app:layout_heightPercent="20%"
        app:layout_widthPercent="50%"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/spSortValue"
        android:orientation="horizontal"
        app:layout_widthPercent="85%">

    <TextView
        android:id="@+id/tvFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spSortValue"
        android:text="@string/tvFilter"
        android:textSize="@dimen/font_size_medium"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        app:layout_widthPercent="35%"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <CheckBox
            android:id="@+id/chkArt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkArt"
            android:textSize="@dimen/font_size_medium"
            />
        <CheckBox
            android:id="@+id/chkFashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkFashion"
            android:textSize="@dimen/font_size_medium"/>
        <CheckBox
            android:id="@+id/chkSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chkSport"
            android:textSize="@dimen/font_size_medium"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorAccent"
            android:text="@string/btnSave"
            android:textSize="@dimen/font_size_medium"
            android:textColor="@color/colorWhite"/>
    </LinearLayout>

    </LinearLayout>

</android.support.percent.PercentRelativeLayout>

